testing/errors/alreadydefined3.a
	*=$1000
label
	nop
label	; -> already defined
